tdf#107102: fix crash in ScCheckListMenuWindow::CreateAccessible

by checking maEdSearch in addition of !mxAccessible.is()
See http://bugs.documentfoundation.org/attachment.cgi?id=132608 for bt

Change-Id: I2cf7f28daaa6d371d3be0d21bb7f140ff6bb8c8c